[package]
name = "lanio"
version = "0.2.0"
edition = "2021"

[dependencies]
# HTTP Server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Filename Parsing
regex = "1.10"
lazy_static = "1.4"

# File Operations
walkdir = "2.4"
mime_guess = "2.0"
notify = "6.1"

# Caching & State
dashmap = "5.5"
moka = { version = "0.12", features = ["future"] }

# Hashing
sha2 = "0.10"

# Templating
askama = "0.15"

# Utilities
base64 = "0.21"
urlencoding = "2.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
envy = "0.4"

[[bin]]
name = "lanio"
path = "src/main.rs"
